# AoC

./: .env  .gitignore  .pre-commit-config.yaml  README.md  Untitled.ipynb  justfile  main.py  main.py.lprof  new_year.py  p.py  profile_year.py  pyproject.toml
.github/workflows/: pylint.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
2015/01/: a.py  b.py
2015/02/: a.py  b.py
2015/03/: a.py  b.py
2015/04/: a.py  b.py
2015/05/: a.py  b.py
2015/06/: a.py  b.py
2015/07/: a.py  b.py
2015/08/: a.py  b.py
2015/09/: a.py  b.py
2015/10/: a.py  b.py
2015/11/: a.py  b.py
2015/12/: a.py  b.py
2015/13/: a.py  b.py
2015/14/: a.py  b.py
2015/15/: a.py  b.py
2015/16/: a.py  b.py
2015/17/: a.py  b.py
2015/18/: a.py  b.py
2015/19/: a.py  b.py  b_first_attempt.py  cyk.py
2015/20/: a.py  b.py
2015/21/: a.py  b.py
2015/22/: a.py  b.py  character.py  game.py  spells.py
2015/23/: a.py  b.py  computer.py
2015/24/: a.py  b.py
2015/25/: a.py
2016/01/: a.py  b.py
2016/02/: a.py  b.py
2016/03/: a.py  b.py
2016/04/: a.py  b.py
2016/05/: a.py  b.py
2016/06/: a.py  b.py
2016/07/: a.py  b.py
2016/08/: a.py
2016/09/: a.py  b.py
2016/10/: a.py  b.py
2016/11/: a.py  a_star.py  b.py  items.py  status.py
2016/12/: a.py  assembunny.py  b.py
2016/13/: a.py  a_star.py  b.py
2016/14/: a.py  b.py
2016/15/: a.py  b.py  chinese_remainder.py
2016/16/: a.py  b.py
2016/17/: a.py  a_star.py  b.py
2016/18/: a.py  b.py
2016/19/: a.py  b.py
2016/20/: a.py  b.py
2016/21/: a.py  b.py
2016/22/: a.py  a_star.py  b.py
2016/23/: a.py  assembunny.py  b.py
2016/24/: a.py  a_star.py  b.py  maze.py
2016/25/: a.py  assembunny.py
2017/01/: a.py  b.py
2017/02/: a.py  b.py
2017/03/: a.py  b.py
2017/04/: a.py  b.py
2017/05/: a.py  b.py  jumpcode_a.py  jumpcode_b.py
2017/06/: a.py  b.py
2017/07/: a.py  b.py
2017/08/: a.py  b.py  register_code.py
2017/09/: a.py  b.py
2017/10/: a.py  b.py
2017/11/: a.py  b.py
2017/12/: a.py  b.py
2017/13/: a.py  b.py  layer.py  status.py
2017/14/: a.py  b.py  knot_hash.py
2017/15/: a.py  b.py
2017/16/: a.py  b.py
2017/17/: a.py  b.py
2017/18/: a.py  b.py  duetcode.py  jumpcode.py
2017/19/: a.py  a_star.py  b.py  maze.py
2017/20/: a.py  b.py
2017/21/: a.py  b.py
2017/22/: a.py  b.py
2017/23/: a.py  b.py  jumpcode.py
2017/24/: a.py  a_star.py  b.py  bridge.py  component.py
2017/25/: a.py  turing.py
2018/01/: a.py  b.py
2018/02/: a.py  b.py
2018/03/: a.py  b.py
2018/04/: a.py  b.py
2018/05/: a.py  b.py
2018/06/: a.py  b.py
2018/07/: a.py  b.py
2018/08/: a.py  b.py  node.py
2018/09/: a.py  b.py  large_marble_game.py  marble_game.py
2018/10/: a.py  b.py
2018/11/: a.py  b.py
2018/12/: a.py  b.py
2018/13/: a.py  b.py  cart.py
2018/14/: a.py  b.py
2018/15/: a.py  a_star.py  b.py  exceptions.py  grid.py  location.py  units.py
2018/16/: a.py  b.py  optcode.py
2018/17/: a.py  b.py  point.py
2018/18/: a.py  b.py  point.py
2018/19/: a.py  b.py  optcode.py
2018/20/: a.py  b.py  point.py
2018/21/: a.py  b.py  optcode.py
2018/22/: a.py  a_star.py  b.py  cave.py  point.py  route.py
2018/23/: a.py  b.py
2018/24/: a.py  army.py  b.py  binary_search.py  group.py
2018/25/: a.py  constellation.py
2019/01/: a.py  b.py  common.py
2019/02/: a.py  b.py  common.py
2019/03/: a.py  b.py  common.py
2019/04/: a.py  b.py  common.py
2019/05/: b.py  common.py
2019/06/: a.py  b.py  common.py
2019/07/: a.py  b.py  common.py
2019/08/: a.py  b.py  common.py
2019/09/: a.py  b.py  common.py
2019/10/: a.py  b.py  common.py
2019/11/: a.py  b.py  (+2 more)
tools/: a_star.py  binary_nums.py  binary_search.py  chinese_remainder.py  errors.py  inputs.py  number_conversion.py  point.py
(+341 files in other folders)
