[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["jimhendy <jimhendy88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
numpy = "<1.25"
numba = "^0.57.1"
aocd = "^0.1"
networkx = "^3.1"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
loguru = "^0.7.2"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
black = "^23.7.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
ignore = [
    "ANN" , # Type annotations
    "D211", # No blank line before class
    "D212", # Docstrings should start on first line
    "D205", # 1 blank line required between summary line and description
    "D401", # First line of docstring should be in imperative mood
    "D107", # Missing docstring in public class
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in puclic method
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D100", # Missing docstring in public module
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark
    "D103", # Missing docstring in public function
    "INP001", # File `2021/17/a.py` is part of an implicit namespace package
    "PD901", # Bad variable naming
    "S324", # Use of hashlib md5
    "C901", # `run_once` is too complex (11 > 10)
    "PLR0912", # Too many branches
    "PLR2004", # Magic value used in comparison
]
target-version = "py311"
exclude = ["20??", "tests"]

[tool.ruff.per-file-ignores]
"optcode.py" = [
    "N803", # Argument should be lowercase
    "ARG002" # Unused method argument
]
"init.py" = [
  "F401" # unused imports
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
