[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aocd>=0.1",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pandas>=2.2.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "regex>=2024.7.24",
    "scipy>=1.14.1",
    "line-profiler>=4.1.3",
]

[tool.ruff]
target-version = "py311"
exclude = ["20??", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN" , # Type annotations
    "D211", # No blank line before class
    "D212", # Docstrings should start on first line
    "D205", # 1 blank line required between summary line and description
    "D401", # First line of docstring should be in imperative mood
    "D107", # Missing docstring in public class
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in puclic method
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D100", # Missing docstring in public module
    "D400", # First line should end with a period
    "D415", # First line should end with a period, question mark
    "D103", # Missing docstring in public function
    "INP001", # File `2021/17/a.py` is part of an implicit namespace package
    "PD901", # Bad variable naming
    "S324", # Use of hashlib md5
    "C901", # `run_once` is too complex (11 > 10)
    "PLR0912", # Too many branches
    "PLR2004", # Magic value used in comparison
    "D203", # one-blank-line-before-class
]

[tool.ruff.lint.per-file-ignores]
"optcode.py" = [
    "N803", # Argument should be lowercase
    "ARG002" # Unused method argument
]
"init.py" = [
  "F401" # unused imports
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
